# Discovering

./: .gitignore  README.md
ARM/: common_problems.md
Boost/: .cproject  .project
Boost/src/: Boost  Boost.cpp  Boost_geometry.cpp  Union.cpp  defPolygon.hpp
Encoding/base_64/: CMakeLists.txt  main.cpp  test.enc
Hardware/SPI/: README.md
ROS/Lamp/lamp_description/: CMakeLists.txt  README  package.xml
ROS/Lamp/lamp_description/urdf/: lamp.xacro
ROS/ros_ws/src/py_fancy_action_client/: CMakeLists.txt  package.xml
ROS/ros_ws/src/py_fancy_action_client/action/: Timer.action
ROS/ros_ws/src/py_fancy_action_client/src/: fancy_action_client.py
ROS/ros_ws/src/service/: CMakeLists.txt  package.xml
ROS/ros_ws/src/service/src/: service_client.cpp  service_server.cpp
ROS/test_service/: CMakeLists.txt  package.xml
Systems/: raspberrypi.md  real_time_kernel.md
XMOS/Array_Of_Interfaces/: .cproject  .project  Makefile
XMOS/Array_as_params_in_interface/: .cproject  .project  LICENSE.txt
XMOS/Blink/: .cproject  .project  Makefile
XMOS/Combinable_functions/: .cproject  .project  Makefile
XMOS/Generating_clock_signal/: .cproject  .project  Makefile
XMOS/Leds_Buttons/: .cproject  .project  Makefile  sqi-624390be  sqi-d206e8a0  sqi-n0-8ad55809
XMOS/Timed_output_on_a_port/: .cproject  .project  Makefile
XMOS/_XMOS_Empty_project/: .cproject  .project  LICENSE.txt  Makefile  README.rst
XMOS/debug_printf_test/: .cproject  .project  Makefile
XMOS/gpio_flashing_leds/: .cproject  .project  Makefile
XMOS/lib_logging/: .cproject  (+1 more)
opencv/: README.md  install.sh
(+105 files in other folders)
